--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,35 +9,35 @@ appcompat = "1.7.0"
 material = "1.12.0"
 constraintlayout = "2.2.0"
 mockk = "1.13.13"
-navigationFragmentKtx = "2.8.4"
-navigationUiKtx = "2.8.4"
+navigation = "2.8.4"
 moshi = "1.15.2"
 pagingRuntime = "3.3.5"
 retrofit = "2.11.0"
 dagger = "2.53.1"
 okhttp = "4.12.0"
-compose-runtime = "1.7.5"
+compose = "1.7.6"
 coroutines = "1.8.0"
 coil = "3.0.4"
 roomRuntime = "2.6.1"
 toggle = "1.1.0"
 datastore = "1.1.1"
-composeMaterial = "1.7.6"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingRuntime" }
 androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version.ref = "pagingRuntime" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomRuntime" }
 androidx-room-paging = { module = "androidx.room:room-paging", version.ref = "roomRuntime" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
-androidx-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose-runtime" }
+androidx-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose" }
 
 # DataStore
 androidx-datastore-core-android = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
-androidx-compose-material = { group = "androidx.compose.material", name = "material", version.ref = "composeMaterial" }
+androidx-compose-material = { group = "androidx.compose.material", name = "material", version.ref = "compose" }
 
 # test
+androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -48,8 +48,8 @@ mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
-androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
-androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
+androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation" }
+androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation" }
 
 # Moshi
 moshi = { group = "com.squareup.moshi", name = "moshi-kotlin", version.ref = "moshi" }
